# sandbox2

manifests/c/pkg/: libpng.pc
manifests/cargo/: Cargo.toml
manifests/composer/php/: composer.json
manifests/gem/gemfile-and-lock/: chelsea.gemspec
manifests/golang/badformat/: go.mod
manifests/golang/linenumbers/: go.list.json  go.mod  go.sum
manifests/golang/nodeps/: go.list.json  go.mod
manifests/golang/typical/: go.list.json
manifests/golang/typical_clone/: go.mod
manifests/gradle/: build.gradle.backup
manifests/maven/: pom.xml
manifests/maven/broken/bad-version/: pom.xml
manifests/maven/broken/missing-dependency/: pom.xml
manifests/maven/broken/missing-parent/: pom.xml
manifests/maven/module1/: pom.xml
manifests/maven/module2/: pom.xml
manifests/maven/module3-broken/: pom.xml
manifests/npm/lift-scanner-cli-package-json-and-lock/: package-lock.json  package.json
manifests/npm/package-json-and-lock/example1/: package-lock.json  package.json
manifests/npm/package-json-and-lock/example3/: README.md  package-lock.json  package.json
manifests/npm/package-json-only/: package.json
manifests/npm/package-lock-only/: package-lock.json
manifests/nuget/csprroj/: project.1.csproj
manifests/nuget/nuspec/: example1.nuspec
manifests/python/: requirements.txt
manifests/swift/: Package.swift
manifests/yarn/yarn-lock-and-json/example1/: package.json
manifests/yarn/yarn-lock-and-json/example3/: package.json
