[package]
name = "vuln"
version = "0.1.0"
authors = ["Michael Kearns <mobiuscog@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "=0.8.3"
security-framework = "=0.1.10"
openssl = "=0.8.3"